--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 streamlit
-requests
 pandas
 networkx
 matplotlib
 sqlalchemy
 openpyxl
+openai
+langchain
+chromadb
+pymupdf
+pdfplumber
+pytesseract
+pillow
+pyvis
 
