--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
-requests
+pymupdf
+python-docx
 pandas
-networkx
-matplotlib
-sqlalchemy
-openpyxl
-
+scikit-learn
+sentence-transformers
+plotly
+jinja2
+weasyprint
+openai
